--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
 
     implementation 'com.orhanobut:dialogplus:1.11@aar'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    implementation 'br.com.mauker.materialsearchview:materialsearchview:1.2.3'
 }
